force-app/main/default/objects/Astrea_Student__c/Astrea_Student__c.object-meta.xml
<CustomObject>
    <description>Stores student profiles, academic scores, branch information, skills, and current placement status. (Optional)</description>
    <label>Astrea Student</label>
    <nameField>
        <label>Student Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Astrea Students</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>