force-app/main/default/objects/Astrea_Student__c/fields/Branch_Category__c.field-meta.xml
<CustomField>
    <fullName>Branch_Category__c</fullName>
    <formula>IF( ISPICKVAL(Branch__c, &quot;CSE&quot;) || ISPICKVAL(Branch__c, &quot;IT&quot;), 

        &quot;Computer Science Stream&quot;, 

        &quot;Core Engineering Stream&quot;)</formula>
    <label>Branch Category</label>
    <type>Text</type>
</CustomField>