force-app/main/default/objects/Astrea_Student__c/fields/CGPA__c.field-meta.xml
<CustomField>
    <fullName>CGPA__c</fullName>
    <label>CGPA</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>