force-app/main/default/objects/Astrea_Student__c/fields/Eligible_for_Placements__c.field-meta.xml
<CustomField>
    <fullName>Eligible_for_Placements__c</fullName>
    <formula>CGPA__c  &gt;=  6</formula>
    <label>Eligible for Placements</label>
    <type>Checkbox</type>
</CustomField>