force-app/main/default/objects/Astrea_Student__c/fields/Student_Performance_Category__c.field-meta.xml
<CustomField>
    <fullName>Student_Performance_Category__c</fullName>
    <formula>IF( CGPA__c   &gt;=  8, &quot;Excellent&quot;, &quot;Average&quot;)</formula>
    <label>Student Performance Category</label>
    <type>Text</type>
</CustomField>