force-app/main/default/objects/Astrea_Student__c/validationRules/CGPA_Limit.validationRule-meta.xml
<ValidationRule>
    <fullName>CGPA_Limit</fullName>
    <active>true</active>
    <errorConditionFormula>CGPA__c  &gt; 10</errorConditionFormula>
    <errorDisplayField>CGPA__c</errorDisplayField>
    <errorMessage>CGPA cannot be greater than 10</errorMessage>
</ValidationRule>