force-app/main/default/objects/Astrea_Student__c/validationRules/Mandatory_Skills.validationRule-meta.xml
<ValidationRule>
    <fullName>Mandatory_Skills</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK( Skills__c )</errorConditionFormula>
    <errorDisplayField>Skills__c</errorDisplayField>
    <errorMessage>The Skills are mandatory.</errorMessage>
</ValidationRule>